--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -1,3 +1,6 @@
+{% load static %}
+{% load bootstrap4 %}
+
 <!DOCTYPE html>
 <html lang="ja">
 
@@ -5,13 +8,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'app1/css/bootstrap.min.css' %}">
     <title>Upload</title>
 </head>
 
 <body>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{form.as_p }}
         <button type="submit">Upload</button>
     </form>
 
@@ -23,6 +27,8 @@
     </tr>
     {% endfor %}
 
+    <script src="{% static 'cms/js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'cms/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
