--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -13,22 +13,38 @@
 </head>
 
 <body>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{form.as_p }}
-        <button type="submit">Upload</button>
-    </form>
+    <div class="container">
+        <h2 class="mt-4 border-bottom">モザイクくん</h2>
+        <h4>写真をアップロードする</h4>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% bootstrap_form form layout='horizontal' %}
+            <button type="submit" class="btn btn-primary mb-4">Upload</button>
+        </form>
 
-    {% for item in obj %}
-    <tr>
-        <td>{{item.description}}</td>
-        <td><img src="{{ item.photo.url }}" width='100' height='100' /></td>
-        <td>{{ item.uploaded_at }}</td>
-    </tr>
-    {% endfor %}
+        <h4>アップロードした画像</h4>
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>uploaded_at</th>
+                    <th>item</th>
+                    <th>image</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in obj %}
+                <tr>
+                    <td>{{ item.uploaded_at }}</td>
+                    <td>{{item.description}}</td>
+                    <td><img src="{{ item.photo.url }}" width='100' height='100' /></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
-    <script src="{% static 'cms/js/jquery-3.4.1.min.js' %}"></script>
-    <script src="{% static 'cms/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'app1/js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'app1/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
