--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -36,7 +36,7 @@
                 <tr>
                     <td>{{ item.uploaded_at }}</td>
                     <td>{{item.description}}</td>
-                    <td><img src="{{ item.photo.url }}" width='100' height='100' /></td>
+                    <td><img src="{{ item.photo.url }}" width='100' height='auto' /></td>
                 </tr>
                 {% endfor %}
             </tbody>
