--- a/app1/templates/app1/process.html
+++ b/app1/templates/app1/process.html
@@ -9,19 +9,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'app1/css/bootstrap.min.css' %}">
-    <title>Upload</title>
+    <title>画像変換くん</title>
 </head>
 
 <body>
     <div class="container">
         <h2 class="mt-4 border-bottom">画像変換くん</h2>
-        <h4>1.写真をアップロードする（1/3）</h4>
+        <h4>2.アップロードした画像の確認(2/3)</h4>
+        <img src="{{ obj.photo.url }}" onerror="this.remove()" width='300' height='auto' />
+
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {% bootstrap_form form layout='horizontal' %}
-            <button type="submit" class="btn btn-primary mt-4">次へ</button>
+            <button type="submit" class="btn btn-primary mt-4" name="button_process">画像を白黒にする</button>
         </form>
-
     </div>
 
     <script src="{% static 'app1/js/jquery-3.4.1.min.js' %}"></script>
