make error hundling

--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -34,7 +34,7 @@
         <h3 class="mt-4">3ステップで画像を白黒処理 or 顔モザイク処理できます</h3>
     </div>
     <div class="container">
-        <h4 class="mt-4">1. 写真をアップロードする（1/3）</h4>
+        <h4 class="mt-4">（1/3）写真をアップロードする</h4>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% bootstrap_form form layout='horizontal' %}
