--- a/app1/templates/app1/process.html
+++ b/app1/templates/app1/process.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-    <h4 class="mt-4">2. アップロードした画像の確認(2/3)</h4>
+    <h4 class="mt-4">（2/3）アップロードした画像の確認</h4>
     <img src="{{ obj.photo.url }}" onerror="this.remove()" width='300' height='auto' />
 
     <form method="post" enctype="multipart/form-data">
