--- a/app1/templates/app1/result.html
+++ b/app1/templates/app1/result.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-    <h4 class="mt-4">3. 結果の確認(3/3)</h4>
+    <h4 class="mt-4">（3/3）結果の確認</h4>
     <img src="{{ obj.processed.url }}" onerror="this.remove()" width='300' height='auto' />
 </div>
 
