--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -36,6 +36,7 @@
     <div class="container">
         <h4 class="mt-4">（1/3）写真をアップロードする</h4>
         <form method="post" enctype="multipart/form-data">
+            <p>ファイル名に2バイト文字が入っているとエラーになるため、ファイル名は半角のみでお願いします。</p>
             {% csrf_token %}
             {% bootstrap_form form layout='horizontal' %}
             <button type="submit" class="btn btn-primary mt-4">次へ</button>
