Add mosaic Feature + Error Handling

--- a/app1/templates/app1/process.html
+++ b/app1/templates/app1/process.html
@@ -8,7 +8,7 @@
 
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <button type="submit" class="btn btn-primary mt-4" name="button_process">画像を白黒にする</button>
+        <button type="submit" class="btn btn-primary mt-4" name="button_gray">画像を白黒にする</button>
         <button type="submit" class="btn btn-primary mt-4" name="button_mosaic">画像に顔モザイクをかける</button>
     </form>
 </div>
