--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -17,13 +17,13 @@
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/app1">画像加工くん</a>
+                    <a class="nav-link" href="{% url 'index' %}">画像加工くん</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">about</a>
+                    <a class="nav-link" href="{% url 'about' %}">about</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">examle</a>
+                    <a class="nav-link" href="{% url 'example' %}">examle</a>
                 </li>
             </ul>
 
