--- a/app1/templates/app1/process.html
+++ b/app1/templates/app1/process.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container mb-5">
     <h4 class="mt-4">（2/3）アップロードした画像の確認</h4>
-    <img src="{{ obj.photo.url }}" onerror="this.remove()" width='300' height='auto' />
+    <img src="{{ obj.photo.url }}" onerror="this.remove()" class="img-fluid" />
 
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
