--- a/app1/templates/app1/process.html
+++ b/app1/templates/app1/process.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container mb-5">
     <h4 class="mt-4">（2/3）アップロードした画像の確認</h4>
     <img src="{{ obj.photo.url }}" onerror="this.remove()" class="img-fluid"/>
 
