--- a/app1/templates/app1/about.html
+++ b/app1/templates/app1/about.html
@@ -2,12 +2,16 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container mb-5">
     <h4 class="mt-4">about</h4>
-</div>
-
-<div class="container">
-    <p>Django </p>
+    <p><a href="https://ryopenguin.com/">ryopenguin</a>が作った画像加工アプリ</p>
+    <h4 class="mt-4">技術要素</h4>
+    <ul>
+        <li>Django</li>
+        <li>OpenCV</li>
+        <li>heroku</li>
+        <li>Google cloud storage</li>
+    </ul>
 </div>
 
 {% endblock %}
