--- a/app1/templates/app1/result.html
+++ b/app1/templates/app1/result.html
@@ -2,12 +2,10 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container mb-5">
     <h4 class="mt-4">（3/3）結果の確認</h4>
     <img src="{{ obj.processed.url }}" onerror="this.remove()" class="img-fluid"/>
-</div>
 
-<div class="container">
     <a href="{{ obj.processed.url }}" download="{{ obj.processed.description }}"
         class="btn btn-primary mt-4">結果をダウンロードする</a>
     <a href="{% url 'index' %}" class="btn btn-secondary mt-4">もう1回</a>
