--- a/app1/templates/app1/example.html
+++ b/app1/templates/app1/example.html
@@ -6,11 +6,13 @@
     <h4 class="mt-4">Example</h4>
 
     <p>before</p>
-    <img src="app1/static/app1/img/example.jpg" onerror="this.remove()" class="img-fluid"/>
+    <img src="https://storage.googleapis.com/imageapp_ryopenguin/app1/img/example.jpg
+    " onerror="this.remove()" class="img-fluid mb-3"/>
     <p>after(白黒)</p>
-    <img src="app1/static/app1/img/example_gray.jpg" onerror="this.remove()" class="img-fluid"/>
+    <img src="https://storage.googleapis.com/imageapp_ryopenguin/app1/img/example_gray.jpg" onerror="this.remove()" class="img-fluid mb-3"/>
     <p>after(モザイク)</p>
-    <img src="app1/static/app1/img/example_mosaic.jpg" onerror="this.remove()" class="img-fluid"/>
+    <img src="https://storage.googleapis.com/imageapp_ryopenguin/app1/img/example_mosaic.jpg
+    " onerror="this.remove()" class="img-fluid mb-3"/>
 
 </div>
 
