--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -43,6 +43,12 @@
         </form>
     </div>
 
+    <footer class="footer">
+        <div class="container">
+          <p class="text-muted">Place sticky footer content here.</p>
+        </div>
+      </footer>
+
     <script src="{% static 'app1/js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'app1/js/bootstrap.bundle.min.js' %}"></script>
 </body>
