--- a/app1/templates/app1/about.html
+++ b/app1/templates/app1/about.html
@@ -12,7 +12,7 @@
         <li>heroku</li>
         <li>Google cloud storage</li>
     </ul>
-    <h4 class="mt-4">使い方/h4>
+    <h4 class="mt-4">使い方</h4>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/X2QTcqVO7Nk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
