--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -45,7 +45,7 @@
 
     <footer class="footer">
         <div class="container">
-          <p class="text-muted">Place sticky footer content here.</p>
+          <p class="text-muted">Copyright © 2020 ryopenguin All Rights Reserved.</p>
         </div>
       </footer>
 
