--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -43,11 +43,11 @@
         </form>
     </div>
 
-    <footer class="footer">
+    <footer class="footer fixed-bottom">
         <div class="container">
-          <p class="text-muted">Copyright © 2020 ryopenguin All Rights Reserved.</p>
+          <p class="text-muted">© All Rights Reserved</p>
         </div>
-      </footer>
+    </footer>
 
     <script src="{% static 'app1/js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'app1/js/bootstrap.bundle.min.js' %}"></script>
