--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -12,7 +12,7 @@
     <title>画像加工くん</title>
 </head>
 
-<body>
+<body class="d-flex flex-column" style="min-height: 100vh">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
             <ul class="navbar-nav">
@@ -30,22 +30,24 @@
         </div>
     </nav>
 
-    <div class="container">
-        <h3 class="mt-4">3ステップで画像を白黒処理 or 顔モザイク処理できます</h3>
-    </div>
-    <div class="container">
-        <h4 class="mt-4">（1/3）写真をアップロードする</h4>
-        <form method="post" enctype="multipart/form-data">
-            <p>ファイル名に2バイト文字が入っているとエラーになるため、ファイル名は半角のみでお願いします。</p>
-            {% csrf_token %}
-            {% bootstrap_form form layout='horizontal' %}
-            <button type="submit" class="btn btn-primary mt-4">次へ</button>
-        </form>
-    </div>
-
-    <footer class="footer fixed-bottom">
+    <main class="mb-auto">
         <div class="container">
-          <p class="text-muted">© All Rights Reserved</p>
+            <h3 class="mt-4">3ステップで画像を白黒処理 or 顔モザイク処理できます</h3>
+        </div>
+        <div class="container">
+            <h4 class="mt-4">（1/3）写真をアップロードする</h4>
+            <form method="post" enctype="multipart/form-data">
+                <p>ファイル名に2バイト文字が入っているとエラーになるため、ファイル名は半角のみでお願いします。</p>
+                {% csrf_token %}
+                {% bootstrap_form form layout='horizontal' %}
+                <button type="submit" class="btn btn-primary mt-4">次へ</button>
+            </form>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+          <p class="text-muted">ryopenguin © All Rights Reserved</p>
         </div>
     </footer>
 
