--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" href="{% static 'app1/ico/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'app1/css/bootstrap.min.css' %}">
     <title>画像加工くん</title>
 </head>
