--- a/app1/templates/app1/about.html
+++ b/app1/templates/app1/about.html
@@ -10,6 +10,7 @@
         <li>Django</li>
         <li>OpenCV</li>
         <li>heroku</li>
+        <li>Cloudflare</li>
         <li>Google cloud storage</li>
     </ul>
 </div>
