--- a/app1/templates/app1/about.html
+++ b/app1/templates/app1/about.html
@@ -3,13 +3,14 @@
 {% block content %}
 
 <div class="container mb-5">
-    <h4 class="mt-4">about</h4>
+    <h4 class="mt-4">About</h4>
     <p><a href="https://ryopenguin.com/">ryopenguin</a>が作った画像加工アプリ</p>
     <h4 class="mt-4">技術要素</h4>
     <ul>
         <li>Django</li>
         <li>OpenCV</li>
         <li>heroku</li>
+        <li>Bootstrap4</li>
         <li>Cloudflare</li>
         <li>Google cloud storage</li>
     </ul>
