--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -11,6 +11,15 @@
     <link rel="icon" type="image/png" href="{% static 'app1/ico/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'app1/css/bootstrap.min.css' %}">
     <title>画像加工くん</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142748858-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-142748858-3');
+    </script>
 </head>
 
 <body class="d-flex flex-column" style="min-height: 100vh">
