--- a/app1/templates/app1/result.html
+++ b/app1/templates/app1/result.html
@@ -11,6 +11,7 @@
         <a href="{{ obj.processed.url }}" download="{{ obj.processed.description }}"
             class="btn btn-primary mt-2 mb-2">結果をダウンロードする</a>
         <a href="{% url 'index' %}" class="btn btn-secondary mt-2 mb-2">もう1回</a>
+        <a href="https://twitter.com/share?url=https://gazokako.vev&text=画像加工くんー白黒・顔モザイク処理が簡単に" target="_blank" rel="nofollow" class="btn btn-secondary mt-2 mb-2">このサービスをシェア</a>
     </div>
 </div>
 
